Correccion de textos segun obseravaciones

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
                 <div class="log-inf-1 log-inf-a1">
                     <p>
                         Descubre una <span class="text-primary">solución integral</span> para tu empresa con nuestra plataforma 
-                        de formularios dinámicos y el <span class="text-primary">Modulo FUEC.</span> 
-                        ¡Transforma tus operaciones y lleva tu negocio al siguiente <span class="text-primary">nivel hoy mismo!</span>
+                        de formularios dinámicos. ¡Transforma tus operaciones y lleva tu negocio al siguiente 
+                        <span class="text-primary">nivel hoy mismo!</span>
                     </p>
                 </div>
                 <div class="log-inf-2 log-inf-a2">
@@ -70,9 +70,10 @@
                 </div>
                 <div class="log-inf-3 log-inf-a3">
                     <p>
-                        <span class="text-primary">Maximiza la eficiencia</span> en la gestión de combustible, 
-                        flotas y control de emisiones.
-                        ¡Haz que tu negocio brille con las soluciones integradas que ofrecemos!
+                        <span class="text-primary">Maximiza</span> la eficiencia en la gestión de combustible, flotas 
+                        y  <span class="text-primary">cumplimiento normativo</span> con <span class="text-primary">nuestras soluciones</span> integradas.
+                        ¡Haz que tu negocio brille con nuestras herramientas especializadas y 
+                        <span class="text-primary">optimiza tus procesos</span> hoy mismo!
                     </p>
                 </div>
             </div>
