--- a/index.html
+++ b/index.html
@@ -12,7 +12,22 @@
     >
 </head>
 <body>
+   
+
     <div class="main-container">
+        <div class="dropdown-language item-language">
+            <button class="languageBtn item-language">
+                <span class="item-language">Lenguaje: </span>
+                <img src="./assets/images/globe.svg" alt="Botón de lenguaje" class="item-language">
+            </button>
+            <div id="languageDropdown" class="dropdown-content">
+              <a href="#"> <img src="./assets/images/es-flag.svg"> Español</a>
+              <a href="#"> <img src="./assets/images/au-flag.svg"> Inglés</a>
+              <a href="#"> <img src="./assets/images/pt-flag.svg"> Portugués</a>
+              <!-- Agrega más idiomas según sea necesario -->
+            </div>
+          </div>
+
         <div class="login-container">
             <div class="logo-container">
                 <img src="./assets/images/Logo RoxDoc.svg" alt="Logo RoxDoc">
@@ -47,6 +62,7 @@
                 </div>
             </div>
         </div>
+
         <div class="information-container">
             <h2>
                 Transforma tu Empresa con Nuestra Plataforma: 
@@ -80,6 +96,8 @@
             <img src="./assets/images/landing.png" class="image-landing" alt="Imagen informativa sobre los productos de RoxDoc">
         </div>
     </div>
+
+
     <script src="./src/js/main.js"></script>
 </body>
 </html>
